color, title zipcode

--- a/www/templates/adopt.html
+++ b/www/templates/adopt.html
@@ -61,10 +61,27 @@
         <input type="email">
       </label>
       <label class="item item-input">
+        <span class="input-label">Zipcode</span>
+        <input type="tel">
+      </label>
+      <label class="item item-input">
         <span class="input-label">Date</span>
         <input type="date">
       </label>
-      <ion-toggle>Subscribe To Newsletter</ion-toggle>
+      <ion-toggle>Work address or</ion-toggle>
+
+      <label class="item item-input item-select">
+        <div class="input-label">
+          Color
+        </div>
+        <select>
+          <option selected>Black</option>
+          <option>Red</option>
+          <option>Blue</option>
+          <option>Green</option>
+        </select>
+      </label>
+
       <button class="button button-positive button-block">Adopt</button>
     </div>
   </ion-content>
