--- a/www/templates/adopt.html
+++ b/www/templates/adopt.html
@@ -1,59 +1,16 @@
 <!--
   This template loads for the 'tab.adopt' state (app.js)
 -->
-<ion-view title="'Adopt A Pet'">
+<ion-view title="'One Time Appointment'">
   <ion-content has-header="true" has-tabs="true">
     <div class="list list-inset">
       <!-- /personal info -->
-      <div class="ui-corner-all custom-corners">
-        <div class="ui-bar ui-bar-a">
-          <h2>Personal Info</h2>
-        </div>
-        <div class="ui-body ui-body-a">
-          <div class="singlerow">
-            <div class="rowleft">
-              First Name *
-            </div>
-            <div class="rowright">
-              <input type="text" id="otc_fname" name="fname" class="half-input" placeholder="First Name"
-              onKeyup="autotab(this, one_time_appointment_form.lname, /^[A-Za-z]+$/, 'Please enter a valid first name')"
-              data-clear-btn="true" autocomplete="off" autocorrect="off" autocapitalize="off" />
-            </div>
-          </div>
-          <div class="singlerow">
-            <div class="rowleft">
-              Last Name *
-            </div>
-            <div class="rowright">
-              <input type="text" id="otc_lname" name="lname" class="half-input" placeholder="Last Name"
-              onKeyup="autotab(this, one_time_appointment_form.email,/^[A-Za-z]+$/,'Please enter a valid last name')"
-              data-clear-btn="true" autocomplete="off" autocorrect="off" autocapitalize="off" />
-            </div>
-          </div>
-          <div class="singlerow">
-            <div class="rowleft">
-              Email *
-            </div>
-            <div class="rowright">
-              <input type="email" name="email" id="otc_registeremail" class="half-input"  placeholder="Personal Email"
-              onblur="autotab(this, one_time_appointment_form.cellph1,/^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$/,'Please enter a valid email')"
-              data-clear-btn="true" autocomplete="off" autocorrect="off" autocapitalize="off"  />
-              <span id="usercheck1"></span>
-            </div>
-          </div>
-          <div class="singlerow">
-            <div class="rowleft">
-              Cell Phone *
-            </div>
-            <label class="item item-input">
-              <span class="input-label">Telephone</span>
-              <input type="tel">
-            </label>
-          </div>
-        </div>
-      </div><!--Personal Info-->
       <label class="item item-input">
-        <span class="input-label">Your name</span>
+        <span class="input-label">First Name</span>
+        <input type="text">
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Last Name</span>
         <input type="text">
       </label>
       <label class="item item-input">
@@ -82,7 +39,7 @@
         </select>
       </label>
 
-      <button class="button button-positive button-block">Adopt</button>
+      <button class="button button-positive button-block">Submit</button>
     </div>
   </ion-content>
 </ion-view>
