--- a/www/templates/adopt.html
+++ b/www/templates/adopt.html
@@ -3,7 +3,8 @@
 -->
 <ion-view title="'One Time Appointment'">
   <ion-content has-header="true" has-tabs="true">
-    <div class="list list-inset">
+  <ion-slide-box on-slide-changed="slideHasChanged($index)">
+    <ion-slide>
       <!-- /personal info -->
       <label class="item item-input">
         <span class="input-label">First Name</span>
@@ -25,8 +26,20 @@
         <span class="input-label">Date</span>
         <input type="date">
       </label>
-      <ion-toggle>Work address or</ion-toggle>
+      <ion-toggle>Work address or Home</ion-toggle>
 
+      </ion-slide>
+      <ion-slide>
+
+
+      <label class="item item-input">
+        <span class="input-label">License Plate</span>
+        <input type="text">
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Last Name</span>
+        <input type="text">
+      </label>
       <label class="item item-input item-select">
         <div class="input-label">
           Color
@@ -39,7 +52,8 @@
         </select>
       </label>
 
-      <button class="button button-positive button-block">Submit</button>
-    </div>
+    <button class="button button-positive button-block">Submit</button>
+      </ion-slide>
+    </ion-slide-box>
   </ion-content>
 </ion-view>
