--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,33 +1,14 @@
 <!--
   This template loads for the 'tab.about' state (app.js)
 -->
-<!DOCTYPE html>
-<html>
-
-<head>
-<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-</head>
-
-<body>
 
 <div ng-app="myApp" ng-controller="customersCtrl"> 
-
+<ion-view>
 <ul>
   <li ng-repeat="x in names">
     {{ x.Name + ', ' + x.Country }}
   </li>
 </ul>
+</ion-view>
 
-</div>
-
-<script>
-var app = angular.module('myApp', []);
-app.controller('customersCtrl', function($scope, $http) {
-  $http.get("http://www.w3schools.com/website/Customers_JSON.php")
-  .success(function (response) {$scope.names = response;});
-});
-</script>
-
-</body>
-</html>
 
