--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -2,12 +2,13 @@
   This template loads for the 'tab.about' state (app.js)
 -->
 
-<ion-view ng-controller="customersCtrl">
+<ion-view>
 <ul>
   <li ng-repeat="x in names">
     {{ x.Name + ', ' + x.Country }}
   </li>
 </ul>
+Hello
 </ion-view>
 
 
